// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Trustly Pay 1`] = `
[
  {
    "channel": "Web",
    "data": {
      "AmountDebit": 100,
      "ContinueOnIncomplete": 1,
      "Currency": "EUR",
      "Invoice": "64752550bf1f40",
      "Order": "64752550bf1f40",
      "PushURL": "https://example.com/push",
      "ReturnURL": "https://example.com/return",
      "Services": {
        "ServiceList": [
          {
            "Action": "Pay",
            "Name": "trustly",
            "Parameters": [
              {
                "Name": "CustomerFirstName",
                "Value": "Test",
              },
              {
                "Name": "CustomerLastName",
                "Value": "Acceptatie",
              },
              {
                "Name": "CustomerCountryCode",
                "Value": "NL",
              },
            ],
            "Version": 0,
          },
        ],
      },
      "ServicesSelectableByClient": "",
    },
    "method": "POST",
    "path": "/json/Transaction",
  },
]
`;

exports[`Trustly Pay 2`] = `
[
  {
    "channel": "Web",
    "data": {
      "AmountCredit": 0.01,
      "Currency": "EUR",
      "Description": "Buckaroo Node SDK Refund Transaction Test",
      "Invoice": "64752550bf1f40",
      "OriginalTransactionKey": "D1A57C57FAF5430D9F98B33D871D15C0",
      "PushURL": "https://example.com/push",
      "ReturnURL": "https://example.com/return",
      "Services": {
        "ServiceList": [
          {
            "Action": "Refund",
            "Name": "trustly",
            "Version": 0,
          },
        ],
      },
      "ServicesSelectableByClient": "",
    },
    "method": "POST",
    "path": "/json/Transaction",
  },
]
`;
